--- a/assets/_forms.scss
+++ b/assets/_forms.scss
@@ -36,7 +36,7 @@ textarea {
   display: block;
   position: relative;
   padding: 15px 0 0;
-  margin-top: 10px;
+  margin-bottom: 8px;
   max-width: 600px;
 
   label {
@@ -58,7 +58,6 @@ textarea {
 }
 
 .form-field {
-  font-family: inherit;
   width: 100%;
   border: 0;
   border-bottom: 1px solid #d2d2d2;
