--- a/assets/global.css
+++ b/assets/global.css
@@ -43,6 +43,7 @@ body {
 
 h1 {
   margin-bottom: 1rem;
+  font-size: 30px;
   font-weight: 400;
   color: black;
 }
@@ -57,6 +58,11 @@ a:hover {
 
 ul {
   margin: 1rem 0;
+}
+
+.code {
+  font-family: 'Courier', Courier, monospace;
+  font-weight: 500;
 }
 
 /* Layout */
