--- a/assets/global.css
+++ b/assets/global.css
@@ -134,3 +134,13 @@ ul {
   border-top-right-radius: var(--global-radius);
   border-bottom-right-radius: var(--global-radius);
 }
+
+.fade-enter-active,
+.fade-leave-active {
+  transition: all .2s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+}
+
+.fade-enter,
+.fade-leave-to {
+  opacity: 0;
+}
