--- a/assets/global.scss
+++ b/assets/global.scss
@@ -8,9 +8,11 @@
 
   --primary-color: #0C71FF;
   --primary-color-hover: #3C8CFF;
+  --primary-lighter: #E7EAFD;  
   --main-bg: #ECEFF1;
   --alert: #CA6A6A;
   --grey: rgba(0,0,0,0.6);
+  --light-grey: rgba(0,0,0,0.3);
   --quick: cubic-bezier(.4,0,.2,1) .2s;
   --border: 1px solid #E6E6E6;
   --border-color: #E6E6E6;
@@ -68,7 +70,7 @@ ul {
 /* Layout */
 
 .main {
-  max-width: 650px;
+  max-width: 700px;
 }
 
 .box {
@@ -112,31 +114,6 @@ ul {
   margin-top: 5px;
   display: block;
   flex-shrink: 0;
-}
-
-.table {
-  width: 100%;
-  margin: 2rem 0;
-  border-collapse: collapse;
-}
-
-.table tr:nth-child(odd) td {
-  background-color: #EFF9FD;
-} 
-
-.table td {
-  padding: 10px 15px;
-} 
-
-.table tr td:first-child {
-  border-top-left-radius: var(--global-radius);
-  border-bottom-left-radius: var(--global-radius);
-  font-weight: bold;
-}
-
-.table tr td:last-child {
-  border-top-right-radius: var(--global-radius);
-  border-bottom-right-radius: var(--global-radius);
 }
 
 .fade-enter-active,
